--- a/src/components/community/aq-community-postdetail-reply.html
+++ b/src/components/community/aq-community-postdetail-reply.html
@@ -180,7 +180,7 @@
               "markdownText": markdownText,
               "user":{"firstName":user.firstName,"lastName":user.lastName},
               "updatedAt": new Date(),
-              "backtestId":this.attachedBacktestId,
+              "backtest_id":this.attachedBacktestId,
           };
 
           if(this.threadData["markdownText"]!="") {
