--- a/src/components/community/aq-community-postdetail-content.html
+++ b/src/components/community/aq-community-postdetail-content.html
@@ -63,8 +63,8 @@
 
       <aq-help-marked-item help-text="{{postContent.markdownText}}"></aq-help-marked-item>
 
-      <template is='dom-if' if="[[isValidBacktestId(postContent.backtestId)]]">
-          <aq-backtest-detail-item backtest-id="[[postContent.backtestId]]">
+      <template is='dom-if' if="[[isValidBacktestId(postContent.backtest_id)]]">
+          <aq-backtest-detail-item backtest-id="[[postContent.backtest_id]]">
           </aq-backtest-detail-item>
       </template>
 
