Minor CSS changes

--- a/src/components/editor/aq-editor-sidebar-log.html
+++ b/src/components/editor/aq-editor-sidebar-log.html
@@ -67,7 +67,7 @@
 					var array = [];
 					for (i in data) {
 						if (data[i].outputtype == "log") {
-							this.push(array,data[i]);
+							array.push(data[i]);
 						}
 					}
 
