--- a/src/components/aq-sidebar.html
+++ b/src/components/aq-sidebar.html
@@ -48,7 +48,7 @@
       --paper-menu-selected-item: {
         --text-decoration: underline;
         background-color: #e3f6ed;--#f4f9fb;
-        border: 1px solid #e24e42;;
+        border: 1px solid teal;--#e24e42;;
       }
 
       --paper-menu-focused-item: {
