--- a/src/components/aq-sidebar.html
+++ b/src/components/aq-sidebar.html
@@ -35,7 +35,7 @@
       border-bottom: 3px solid #cf6766;
       height:70px;
     }
-   
+
     paper-menu {
       padding-bottom: 0;
       background-color: #f2fbf7;--#f4f9fb;--#e5f1f5;
@@ -47,8 +47,8 @@
 
       --paper-menu-selected-item: {
         --text-decoration: underline;
-        background-color: #e3f6ed;--#f4f9fb;
-        border: 1px solid teal;--#e24e42;;
+        background-color: white;--#e3f6ed;--#f4f9fb;
+        border: 1px solid #c3403f;--teal;--#e24e42;;
       }
 
       --paper-menu-focused-item: {
@@ -62,7 +62,7 @@
      --iron-icon-width:20px;
      --iron-icon-height:20px;
      --color:#24293d;
-     color:#c3403f !important;
+     color: teal !important;
    }
 
    paper-icon-item {
