--- a/src/components/common/aq-backtest-detail-item.html
+++ b/src/components/common/aq-backtest-detail-item.html
@@ -788,7 +788,7 @@
 					 });
 
 					this.$$('#trackVarLineChart')._chart.yAxis
-					.ticks(Math.ceil((max - min)/scale));
+					.ticks(3);
 
 					this.$$('#trackVarLineChart')._chart.forceY([min,max]);
 
