--- a/src/components/editor/aq-editor-toolbar.html
+++ b/src/components/editor/aq-editor-toolbar.html
@@ -114,7 +114,7 @@
 		 		
 		 		<span class="self-center separator"></span>
 				
-				<paper-icon-button noink class="flex toolbarIcon" icon="vaadin-icons:chart" title="Analyze all Backtests" on-tap='onAnalyze'></paper-icon-button>
+				<paper-icon-button noink class="flex toolbarIcon" icon="vaadin-icons:line-bar-chart" title="Analyze all Backtests" on-tap='onAnalyze'></paper-icon-button>
 
 		 		<paper-icon-button id='runButton' noink class="flex self-center toolbarPlayIcon" icon="aq-icons:play-arrow" title="Run Backtest" on-tap='onRun'></paper-icon-button>
 
