--- a/src/components/profile-img.html
+++ b/src/components/profile-img.html
@@ -19,13 +19,15 @@
     }
     .profile {
       border-radius: 50%;
-      width: 40px;
-      height: 40px;
+      width: 35px;
+      height: 35px;
       transition: transform 350ms ease-in-out;
-      background-color: #9e9e9e;
-      color: white;
+      background-color: white;
+      color: #24293d;
+      border: 1px solid #24293d;
       will-change: transform;
       cursor: pointer;
+      
     }
     img,
     .letter {
@@ -70,8 +72,9 @@
       letter: {
         type: String,
         value: null
-      }
-    }
+      },
+    },
+
   });
 </script>
 </dom-module>
