--- a/src/components/analyze/aq-analyze-home-menu.html
+++ b/src/components/analyze/aq-analyze-home-menu.html
@@ -103,6 +103,18 @@
 		.iconButton:active {
 			padding: 8px;
 		}
+
+		paper-tooltip.iconTooltip {
+        	--paper-tooltip: {
+          		font-size: 13px;
+          		min-width: 40px;
+          		text-align: center;
+        	}
+
+        	--paper-tooltip-opacity: 1.0;
+			--paper-tooltip-background: teal;
+		}
+		
 		
 	</style>
 	
@@ -115,14 +127,19 @@
 	    	<p class="self-center flex">Back to Strategies</p>
 
 	      	<div id='menu-icons' class="layout horizontal">
-	  			<paper-icon-button noink class="iconButton" icon="aq-icons:delete" title="Delete"  on-tap="onDelete" disabled="[[!isDeleteActive(numActiveBacktests)]]">
+	  			<paper-icon-button  id='deleteIcon' noink class="iconButton" icon="aq-icons:delete" on-tap="onDelete" disabled="[[!isDeleteActive(numActiveBacktests)]]">
 	  			</paper-icon-button>
 
-				<paper-icon-button noink class="iconButton" icon="aq-icons:chrome-reader-mode" title="Compare" on-tap="onCompare" disabled="[[!isCompareActive(numActiveBacktests)]]">
+				<paper-icon-button  id='compareIcon' noink class="iconButton" icon="aq-icons:chrome-reader-mode" on-tap="onCompare" disabled="[[!isCompareActive(numActiveBacktests)]]">
 				</paper-icon-button>
 					
 			</div>      	
   		</div>
+
+  		<paper-tooltip for='compareIcon' offset="2" class=' self-center iconTooltip' position="bottom" animation-delay="0" fit-to-visible-bounds>Compare</paper-tooltip>
+        		
+    	<paper-tooltip for='deleteIcon' offset="2" class=' self-center iconTooltip' position="bottom" animation-delay="0" fit-to-visible-bounds>Delete</paper-tooltip>
+        	
 
 	</template>
 	
